--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     def retrofit2_version = "2.6.0"
     def roomVersion ="2.2.6"
     def koin_version= "2.2.2"
