--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import everis_android.buildSrc.Libs
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -25,22 +27,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
     }
 }
 
 dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    def retrofit2_version = "2.6.0"
-    def roomVersion ="2.2.6"
-    def koin_version= "2.2.2"
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -49,14 +54,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation Libs.Retrofit.retrofit
+    implementation Libs.Retrofit.retrofitMoshi
+    implementation Libs.Retrofit.retrofitCoroutines
 
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation Libs.Room.roomRunTime
+    kapt Libs.Room.roomCompiler
 
-    implementation "org.koin:koin-core:$koin_version"
-    implementation "org.koin:koin-core-ext:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
+    implementation Libs.Koin.koinCore
+    implementation Libs.Koin.koinExt
+    testImplementation Libs.Koin.koinTest
+
+    implementation Libs.OkHttp.okHttp
+    implementation Libs.OkHttp.okHttpInterceptor
+
+    implementation Libs.Coroutines.coroutines
+    implementation Libs.Coroutines.core
 }
