--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,16 @@ android {
     }
 
     buildTypes {
+        def baseUrl =  '\"' + (System.getenv("SERVER_URL")?: "https://evesovamu.free.beeceptor.com")+'\"'
+
+        debug{
+            buildConfigField "String", "BASE_URL", baseUrl
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", baseUrl
         }
     }
 
