--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,14 +45,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation Libs.Androidx.constraintLayout
+    implementation Libs.Kotlin.kotlin
+    implementation Libs.Androidx.androidxCore
+    implementation Libs.Androidx.appCompat
+    implementation Libs.Material.materialDesign
+
+    testImplementation Libs.Test.jUnit
+    androidTestImplementation Libs.Test.jUnitExt
+    androidTestImplementation Libs.Test.espresso
 
     implementation Libs.Retrofit.retrofit
     implementation Libs.Retrofit.retrofitMoshi
@@ -68,6 +69,7 @@ dependencies {
     implementation Libs.OkHttp.okHttp
     implementation Libs.OkHttp.okHttpInterceptor
 
-    implementation Libs.Coroutines.coroutines
-    implementation Libs.Coroutines.core
+    implementation Libs.Kotlin.coroutines
+    implementation Libs.Kotlin.core
+    implementation Libs.Gson.googleGson
 }
