--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
+import everis_android.buildSrc.Libs
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    def koin_version= "2.2.2"
-    ext.kotlin_version = "1.4.31"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.koin:koin-gradle-plugin:$koin_version"
+        classpath Libs.Kotlin.pluginKotlin
+        classpath Libs.Koin.pluginKoin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
