--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,14 @@ android {
     buildTypes {
         def baseUrl =  '\"' + (System.getenv("SERVER_URL")?: "https://evesovamu.free.beeceptor.com")+'\"'
 
-        debug{
-            buildConfigField "String", "BASE_URL", baseUrl
+        debug {
+            buildConfigField "String", "SERVER_URL", baseUrl
         }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", baseUrl
+            buildConfigField "String", "SERVER_URL", baseUrl
         }
     }
 
