--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,8 @@ dependencies {
     implementation Libs.Kotlin.coroutines
     implementation Libs.Kotlin.core
     implementation Libs.Gson.googleGson
+
+    implementation Libs.Navigation.navigationFragment
+    implementation Libs.Navigation.navigationUi
+    implementation Libs.Navigation.navigationDynamic
 }
